--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Il mio Viaggio a Londra</h1>
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London landscape 0">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="London landscape 1">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="London landscape 2">
+    <hr>
+  </header>
+
+  <main>2</main>
+
+  <footer>3</footer>
+
 </body>
 </html>
