aggiunta sezione spese

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>London Trip</title>
 </head>
 <body>
   <header>
@@ -12,10 +12,52 @@
     <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London landscape 0">
     <img src="img/pexels-bill-emrich-230794-1.jpg" alt="London landscape 1">
     <img src="img/pexels-bill-emrich-230794-2.jpg" alt="London landscape 2">
-    <hr>
   </header>
+  
+  <main>
+    <!-- Inizio sezione spese -->
+    <section>
+      <hr>
+      <h2>Le mie spese</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+          </tr>
+        </thead>
 
-  <main>2</main>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120€</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120€</td>
+          </tr>
+        </tbody>
+
+        <tfoot>
+          <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>360€</td>
+          </tr>
+        </tfoot>
+      </table>
+    </section>
+    <!-- Fine sezione spese -->
+    
+  </main>
 
   <footer>3</footer>
 
