--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
       </table>
     </section>
     <!-- Fine sezione spese -->
+
+    <!-- Inizio sezione cose da fare -->
+    <section>
+      <hr>
+      <h3>Cose da fare</h3>
+      <ul>
+        <li>Visitare la Tower of London &#10008;</li>
+        <li>Visitare greenwich &#10004;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+      </ul>
+    </section>
+    <!-- Fine sezione cose da fare -->
     
   </main>
 
